# PyNote

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  COSTS.md  DEPLOY.md  DIAGRAMS.md  ENHANCEMENTS.md  Justfile  Makefile  PLAN.md  PRESENTATION_SCRIPT.md  Procfile  RAG_ROADMAP.md  README.md  SHIP.md  _e2e_nb_id.txt  _e2e_src_id.txt  alembic.ini  conftest.py  docker-compose.dev.yml  mprocs.yaml  pynote-rag-teachin.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260527_1400_0001_initial.py  20260527_1500_0002_sources.py  20260531_1900_0003_chunks.py  20260708_1000_0004_source_part_meta.py
apps/api/: Dockerfile  pyproject.toml
apps/api/src/pynote_api/: __init__.py  __main__.py  auth.py  deps.py  main.py
apps/api/src/pynote_api/routes/: chat.py  health.py  jobs.py  mindmap.py  notebooks.py  search.py  sources.py  summaries.py
apps/api/tests/: test_chat.py  test_health.py  test_notebooks.py  test_search.py  test_sources.py  test_tenant_scope.py
apps/web/: .env.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/notebook/[id]/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/components/: MindMapRenderer.tsx  chat-panel.tsx  citation-pill.tsx  create-notebook-form.tsx  notebook-card.tsx  notebook-search.tsx  pdf-viewer.tsx  source-drawer.tsx  source-list.tsx  source-uploader.tsx  status-pill.tsx  suggested-questions.tsx  summary-button.tsx
apps/web/lib/: api.ts  chat.ts  pdf.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/pynote_worker/: __init__.py  __main__.py  main.py  tasks.py
eval/: README.md  metrics.py  ragas_metrics.py  retrieval_eval.py  run.py
eval/golden/: retrieval.template.jsonl  sample.jsonl  thesis-proposal.jsonl
eval/notes/: m3-tuning.md
eval/prototype/: chat.py  citations.py  m3.py  retrieval.py
eval/tests/: test_citations.py  test_metrics.py  test_retrieval_eval.py
infra/: postgres-init.sql
