[project]
name = "pynote-api"
version = "0.1.0"
description = "PyNote FastAPI service."
requires-python = ">=3.12"
dependencies = [
  "pynote-core",
  # web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  # auth — Clerk JWT verification via JWKS
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  # storage
  "boto3>=1.35",
  # job queue client (enqueue from api, run in worker)
  "arq>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pynote_api"]
