[project]
name = "pynote-worker"
version = "0.1.0"
description = "PyNote arq worker — ingest, embedding, outline jobs."
requires-python = ">=3.12"
dependencies = [
  "pynote-core",
  "arq>=0.26",
  "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pynote_worker"]
